--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
 }
 
+#clickable-bg,
+#clickable-bg2 {
+  /* 其他樣式屬性 */
+  transition: background-image 0.9s ease-in-out;
+}
+
 /* 放大视图样式 */
 .zoomed-view {
   position: fixed;
@@ -37,8 +43,10 @@ header {
   flex-wrap: wrap;
 }
 header section.logo h1 {
+  color: rgb(212, 149, 133);
+  padding-left: 20px;
   padding-top: 0.5rem;
-  font-family: "Zhi Mang Xing", "Liu Jian Mao Cao", Arial, sans-serif;
+  font-family: "Josefin Slab", serif, Arial, sans-serif;
   font-size: 1.8rem;
 }
 header nav {
@@ -52,7 +60,7 @@ header nav ul {
   align-items: center;
 }
 header nav ul li a {
-  color: rgba(95, 90, 90, 0.5);
+  color: rgba(42, 38, 38, 0.5);
   padding-right: 2.5rem;
   text-decoration: none;
   font-size: 1rem;
@@ -73,7 +81,21 @@ main section.background-img1 {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  transition: background-image 8s ease;
+  transition: background-image 1s ease;
+}
+main section.background-img1 h2 {
+  display: flex;
+  font-size: 2.5rem;
+  color: transparent;
+  align-items: center;
+  justify-content: center;
+  min-height: 70vh;
+  z-index: 5;
+  font-family: "Josefin Slab", serif, Arial, sans-serif;
+  transition: color 2s ease;
+}
+main section.background-img1:hover h2 {
+  color: rgb(210, 125, 108);
 }
 main section.background-img1 div.filter {
   padding: 200px;
@@ -85,30 +107,6 @@ main section.background-img1 div.filter {
   left: 0;
   z-index: -1;
   transition: background-color 2s ease;
-}
-main section.background-img1 h2 {
-  display: flex;
-  font-size: 2.5rem;
-  color: rgb(210, 125, 108);
-  align-items: center;
-  justify-content: center;
-  min-height: 70vh;
-  z-index: 5;
-  font-family: "Josefin Slab", serif, Arial, sans-serif;
-  transition: color 2s ease;
-}
-main section.background-img1:hover {
-  background-image: url("./Pic/jump2.png");
-  min-height: 70vh;
-  background-position: center;
-  position: relative;
-  z-index: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-main section.background-img1:hover h2 {
-  color: transparent;
 }
 main section.background-img1 div.handsImage {
   background-image: url("./Pic/hands.png");
@@ -128,6 +126,8 @@ main section.background-img1 div.handsImage {
   position: absolute;
 }
 main section.background-img2 {
+  padding-top: 50px;
+  margin: 0px 80px;
   background-image: url("./Pic/end1.jpg");
   min-height: 70vh;
   background-position: center;
@@ -136,23 +136,14 @@ main section.background-img2 {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  transition: background-image 8s ease;
-}
-main section.background-img2 div.filter {
-  padding: 200px;
-  background-color: rgba(210, 150, 150, 0.3);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: background-color 2s ease;
+  transition: background-image 1s ease;
+  border-radius: 5%;
+  background-position: center;
 }
 main section.background-img2 h2 {
   display: flex;
   font-size: 2.5rem;
-  color: rgb(210, 125, 108);
+  color: transparent;
   align-items: center;
   justify-content: center;
   min-height: 70vh;
@@ -160,18 +151,13 @@ main section.background-img2 h2 {
   font-family: "Josefin Slab", serif, Arial, sans-serif;
   transition: color 2s ease;
 }
-main section.background-img2:hover {
-  background-image: url("./Pic/end2.jpg");
-  min-height: 70vh;
-  background-position: center;
-  position: relative;
-  z-index: 0;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
 main section.background-img2:hover h2 {
-  color: transparent;
+  color: rgb(210, 125, 108);
+}
+main section.background-img2 div.image {
+  max-width: 60vw;
+  display: flex;
+  align-items: center;
 }
 main div.counter {
   max-width: 55vh;
@@ -293,8 +279,8 @@ main section.weddingLink h3 {
 main section.weddingInfo p,
 main section.weddingLink p {
   line-height: 2;
-  font-size: 12px;
-  padding-bottom: 50px;
+  font-size: 14px;
+  padding: 50px;
   flex-direction: column;
 }
 main section.weddingInfo #map,
@@ -326,7 +312,7 @@ main section.notice div.notice-main div.notice-text {
   justify-content: space-around;
 }
 main section.notice div.notice-main div.notice-text h4 {
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-align: center;
   padding-bottom: 1.5rem;
   display: flex;
@@ -339,16 +325,21 @@ main section.notice div.notice-main div.notice-text h4 i {
 }
 main section.notice div.notice-main div.notice-text p {
   line-height: 2;
-  font-size: 12px;
+  font-size: 14px;
   padding-bottom: 50px;
   flex-direction: column;
 }
 main section.photos {
-  flex-wrap: wrap;
+  overflow: hidden; /* 隐藏滚动条 */
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-bottom: 250px;
-  background-color: rgba(210, 150, 150, 0.3);
+  background-color: rgba(238, 152, 152, 0.3);
 }
 main section.photos h3.titleText {
+  display: flex;
   padding-top: 60px;
   margin-bottom: 100px;
   text-align: center;
@@ -356,30 +347,39 @@ main section.photos h3.titleText {
   align-items: center;
 }
 main section.photos div.swiper {
-  width: 100%;
-  height: 300px;
+  width: 35vw;
+  height: 50vh;
   display: flex;
-  overflow: hidden; /* 隱藏超出容器的部分 */
+}
+main section.photos div.swiper div.swiper-wrapper {
+  max-height: 35vh;
+  width: 50vw;
 }
 main section.photos div.swiper div.swiper-wrapper div.swiper-slide {
-  width: 50%; /* 每個幻燈片的寬度為50%以並排顯示 */
-  transition: opacity 0.5s ease;
-  background-size: cover;
-  position: relative; /* 設置相對定位，以便使用 object-position */
-}
-main section.photos div.swiper div.swiper-wrapper div.swiper-slide:hover {
-  opacity: 1; /* 懸停時取消淡出效果 */
+  background-color: rgba(255, 254, 254, 0.8274509804);
+  width: 50vw; /* 设置外框宽度 */
+  height: 40vh; /* 设置外框高度，使其与宽度保持一致 */
+  border-radius: 20px;
+  font-weight: bold;
+  overflow: hidden; /* 隐藏超出外框的部分 */
+  position: relative; /* 添加相对定位，用于放大图片 */
+  flex-direction: column; /* 修改为垂直排列 */
+  /* 设置固定高度，并允许垂直滚动 */
 }
 main section.photos div.swiper div.swiper-wrapper div.swiper-slide img {
-  -o-object-fit: contain;
-     object-fit: contain;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
+  width: 100%; /* 图片宽度占满外框 */
+  height: 100%; /* 图片高度占满外框 */
+  align-items: center;
+  justify-content: center;
+  -o-object-fit: cover;
+     object-fit: cover; /* 根据外框比例填充图片，可能会裁剪部分图片 */
   -o-object-position: center;
-     object-position: center; /* 調整圖片在容器中的位置 */
+     object-position: center; /* 图片在外框中居中显示 */
+}
+main section.justWhite {
+  background-color: white;
+  width: 100%;
+  height: 200px;
 }
 @media screen and (max-width: 450px) {
   main body header {
@@ -496,6 +496,36 @@ main section.photos div.swiper div.swiper-wrapper div.swiper-slide img {
     text-align: left;
     max-width: 600px;
   }
+  main body section.photos {
+    flex-direction: column;
+    display: flex;
+    padding-bottom: 250px;
+    background-color: rgba(238, 152, 152, 0.3);
+  }
+  main body section.photos h3.titleText {
+    display: flex;
+    padding-top: 60px;
+    margin-bottom: 100px;
+  }
+  main body section.photos div.swiper {
+    width: 5vw;
+    height: 50vh;
+    display: flex;
+  }
+  main body section.photos div.swiper div.swiper-wrapper {
+    min-height: 55vh;
+    min-width: 50vw;
+  }
+  main body section.photos div.swiper div.swiper-wrapper div.swiper-slide {
+    background-color: rgba(255, 254, 254, 0.8274509804);
+    width: 50vw; /* 设置外框宽度 */
+    height: 40vh; /* 设置外框高度，使其与宽度保持一致 */
+    border-radius: 20px;
+    font-weight: bold;
+    overflow: hidden; /* 隐藏超出外框的部分 */
+    position: relative; /* 添加相对定位，用于放大图片 */
+    /* 设置固定高度，并允许垂直滚动 */
+  }
 }
 @media screen and (min-width: 800px) {
   main body header section.logo {
@@ -508,7 +538,7 @@ main section.photos div.swiper div.swiper-wrapper div.swiper-slide img {
     height: 80vw;
   }
   main body header nav {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   main body header nav ul {
     flex-direction: row;
@@ -635,6 +665,43 @@ main section.photos div.swiper div.swiper-wrapper div.swiper-slide img {
     flex-direction: column;
   }
 }
+@media screen and (max-width: 380px) {
+  main body header section.logo {
+    flex-direction: column;
+    min-width: 80vw;
+  }
+  main body header section.logo img {
+    flex-direction: column;
+    width: 80vw;
+    height: 80vw;
+  }
+  main body header nav {
+    font-size: 2.5rem;
+    display: flex;
+    flex-direction: column;
+  }
+  main body header nav ul {
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    position: relative;
+    top: -75px;
+    display: flex;
+  }
+  main body header nav ul li {
+    flex-direction: column;
+    display: flex;
+    flex-wrap: wrap;
+    height: 0.5rem;
+    justify-content: end;
+  }
+  main body header nav ul li a {
+    display: flex;
+  }
+  main main div.counter {
+    height: 500px;
+  }
+}
 
 footer section.filter2 {
   max-width: 100vw;
@@ -642,7 +709,7 @@ footer section.filter2 {
 footer section.filter2 div.pureColor {
   height: 150px;
   width: 100%;
-  background-color: rgba(210, 150, 150, 0.3);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 footer section.endTag {
   display: flex;
@@ -650,7 +717,7 @@ footer section.endTag {
   justify-content: center;
 }
 
-button.scroll-to-top-button {
+button.scrollTop {
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -665,8 +732,8 @@ button.scroll-to-top-button {
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  z-index: 150;
+  z-index: 950;
 }
-button.scroll-to-top-button:hover {
+button.scrollTop:hover {
   background-color: rgba(206, 74, 74, 0.7);
 }/*# sourceMappingURL=style.css.map */
