--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,12 @@ $background5: "./Pic/end2.jpg";
   box-sizing: border-box;
 }
 
+#clickable-bg,
+#clickable-bg2 {
+  /* 其他樣式屬性 */
+  transition: background-image 0.9s ease-in-out;
+}
+
 @mixin background-image-transition($image-url, $image2-url) {
   background-image: url($image-url);
   min-height: 70vh;
@@ -22,22 +28,10 @@ $background5: "./Pic/end2.jpg";
   background-repeat: no-repeat;
   background-position: center;
 
-  div.filter {
-    padding: 200px;
-    background-color: rgba(210, 150, 150, 0.3);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: background-color 2s ease; // Add transition for background-color
-  }
-
   h2 {
     display: flex;
     font-size: 2.5rem;
-    color: rgb(210, 125, 108);
+    color: transparent;
     align-items: center;
     justify-content: center;
     min-height: 70vh;
@@ -46,26 +40,26 @@ $background5: "./Pic/end2.jpg";
     transition: color 2s ease; // Add transition for color
   }
 
-  &:hover {
-    background-image: url($image2-url);
-    min-height: 70vh;
-    background-position: center;
-    position: relative;
-    z-index: 0;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
+  // &:hover {
+  //   background-image: url($image2-url);
+  //   min-height: 70vh;
+  //   background-position: center;
+  //   position: relative;
+  //   z-index: 0;
+  //   background-size: contain;
+  //   background-repeat: no-repeat;
+  //   background-position: center;
+  // }
 
   // &:hover .filter {
   //   background-color: rgba(210, 150, 150, 0); // Change to transparent on hover
   // }
 
   &:hover h2 {
-    color: transparent; // Change to transparent on hover
+    color: rgb(210, 125, 108);
   }
 
-  transition: background-image 8s ease; // Add transition for background-image
+  transition: background-image 1s ease; // Add transition for background-image
 }
 
 /* 放大视图样式 */
@@ -100,9 +94,11 @@ header {
   section.logo {
     // border: 5px solid green;
     h1 {
+      color: rgb(212, 149, 133);
+      padding-left: 20px;
       padding-top: 0.5rem;
-      font-family: "Zhi Mang Xing", "Liu Jian Mao Cao", Arial, sans-serif;
-      //   font-family: "Liu Jian Mao Cao", cursive;(替代用字體)
+      // font-family: "Zhi Mang Xing", "Liu Jian Mao Cao", Arial, sans-serif;
+      font-family: "Josefin Slab", serif, Arial, sans-serif; //(替代用字體)
       font-size: 1.8rem;
     }
   }
@@ -119,7 +115,7 @@ header {
       align-items: center;
       li {
         a {
-          color: rgba(95, 90, 90, 0.5);
+          color: rgba(42, 38, 38, 0.5);
           padding-right: 2.5rem;
           text-decoration: none;
           font-size: 1rem;
@@ -135,7 +131,17 @@ main {
   position: relative;
   section.background-img1 {
     @include background-image-transition($background1, $background2);
-
+    div.filter {
+      padding: 200px;
+      background-color: rgba(210, 150, 150, 0.3);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      transition: background-color 2s ease; // Add transition for background-color
+    }
     div.handsImage {
       background-image: url($background3);
       width: 30vh;
@@ -155,7 +161,16 @@ main {
     }
   }
   section.background-img2 {
+    padding-top: 50px;
+    margin: 0px 80px;
     @include background-image-transition($background4, $background5);
+    border-radius: 5%;
+    background-position: center;
+    div.image {
+      max-width: 60vw;
+      display: flex;
+      align-items: center;
+    }
   }
 
   /* 重新定義倒數計時的容器 */
@@ -287,8 +302,8 @@ main {
     }
     p {
       line-height: 2;
-      font-size: 12px;
-      padding-bottom: 50px;
+      font-size: 14px;
+      padding: 50px;
       flex-direction: column;
     }
 
@@ -321,7 +336,7 @@ main {
         justify-content: space-around;
 
         h4 {
-          font-size: 0.8rem;
+          font-size: 1rem;
           text-align: center;
           padding-bottom: 1.5rem;
           display: flex;
@@ -334,7 +349,7 @@ main {
         }
         p {
           line-height: 2;
-          font-size: 12px;
+          font-size: 14px;
           padding-bottom: 50px;
           flex-direction: column;
         }
@@ -343,12 +358,18 @@ main {
   }
 
   section.photos {
-    flex-wrap: wrap;
+    overflow: hidden; /* 隐藏滚动条 */
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding-bottom: 250px;
-    background-color: rgba(210, 150, 150, 0.3);
+    background-color: rgba(238, 152, 152, 0.3);
 
     // border: 5px solid red;
     h3.titleText {
+      display: flex;
+
       padding-top: 60px;
       margin-bottom: 100px;
       text-align: center;
@@ -356,34 +377,47 @@ main {
       align-items: center;
     }
     div.swiper {
-      width: 100%;
-      height: 300px;
+      width: 35vw;
+      height: 50vh;
       display: flex;
-      overflow: hidden; /* 隱藏超出容器的部分 */
+
       div.swiper-wrapper {
+        max-height: 35vh;
+        width: 50vw;
+
         div.swiper-slide {
-          width: 50%; /* 每個幻燈片的寬度為50%以並排顯示 */
+          background-color: #fffefed3;
+          width: 50vw; /* 设置外框宽度 */
+          height: 40vh; /* 设置外框高度，使其与宽度保持一致 */
+          border-radius: 20px;
+          font-weight: bold;
+          overflow: hidden; /* 隐藏超出外框的部分 */
+          position: relative; /* 添加相对定位，用于放大图片 */
+          flex-direction: column; /* 修改为垂直排列 */
 
-          transition: opacity 0.5s ease;
-          background-size: cover;
-          position: relative; /* 設置相對定位，以便使用 object-position */
+          /* 设置固定高度，并允许垂直滚动 */
 
-          &:hover {
-            opacity: 1; /* 懸停時取消淡出效果 */
-          }
+          // &:hover {
+          //   opacity: 1; /* 懸停時取消淡出效果 */
+          // }
 
           img {
-            object-fit: contain;
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            width: 100%;
-            height: 100%;
-            object-position: center; /* 調整圖片在容器中的位置 */
+            width: 100%; /* 图片宽度占满外框 */
+            height: 100%; /* 图片高度占满外框 */
+            align-items: center;
+            justify-content: center;
+            object-fit: cover; /* 根据外框比例填充图片，可能会裁剪部分图片 */
+            object-position: center; /* 图片在外框中居中显示 */
           }
         }
       }
     }
+  }
+
+  section.justWhite {
+    background-color: white;
+    width: 100%;
+    height: 200px;
   }
 
   @media screen and (max-width: 450px) {
@@ -510,6 +544,45 @@ main {
           max-width: 600px;
         }
       }
+      section.photos {
+        flex-direction: column;
+        display: flex;
+        padding-bottom: 250px;
+        background-color: rgba(238, 152, 152, 0.3);
+
+        // border: 5px solid red;
+        h3.titleText {
+          display: flex;
+          padding-top: 60px;
+          margin-bottom: 100px;
+        }
+        div.swiper {
+          width: 5vw;
+          height: 50vh;
+          display: flex;
+
+          div.swiper-wrapper {
+            min-height: 55vh;
+            min-width: 50vw;
+
+            div.swiper-slide {
+              background-color: #fffefed3;
+              width: 50vw; /* 设置外框宽度 */
+              height: 40vh; /* 设置外框高度，使其与宽度保持一致 */
+              border-radius: 20px;
+              font-weight: bold;
+              overflow: hidden; /* 隐藏超出外框的部分 */
+              position: relative; /* 添加相对定位，用于放大图片 */
+
+              /* 设置固定高度，并允许垂直滚动 */
+
+              // &:hover {
+              //   opacity: 1; /* 懸停時取消淡出效果 */
+              // }
+            }
+          }
+        }
+      }
     }
   }
 
@@ -526,7 +599,7 @@ main {
           }
         }
         nav {
-          font-size: 3rem;
+          font-size: 2.5rem;
           ul {
             flex-direction: row;
             align-items: center;
@@ -660,8 +733,51 @@ main {
       }
     }
   }
-}
 
+  @media screen and (max-width: 380px) {
+    body {
+      header {
+        section.logo {
+          flex-direction: column;
+          min-width: 80vw;
+          img {
+            flex-direction: column;
+            width: 80vw;
+            height: 80vw;
+          }
+        }
+        nav {
+          font-size: 2.5rem;
+          display: flex;
+          flex-direction: column;
+          ul {
+            flex-direction: column;
+            align-items: center;
+            justify-content: end;
+            position: relative;
+            top: -75px;
+            display: flex;
+            li {
+              flex-direction: column;
+              display: flex;
+              flex-wrap: wrap;
+              height: 0.5rem;
+              justify-content: end;
+              a {
+                display: flex;
+              }
+            }
+          }
+        }
+      }
+    }
+    main {
+      div.counter {
+        height: 500px;
+      }
+    }
+  }
+}
 footer {
   section.filter2 {
     max-width: 100vw;
@@ -669,7 +785,7 @@ footer {
     div.pureColor {
       height: 150px;
       width: 100%;
-      background-color: rgba(210, 150, 150, 0.3);
+      background-color: rgba(255, 255, 255, 0.3);
     }
   }
   section.endTag {
@@ -679,7 +795,7 @@ footer {
   }
 }
 
-button.scroll-to-top-button {
+button.scrollTop {
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -694,7 +810,7 @@ button.scroll-to-top-button {
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  z-index: 150;
+  z-index: 950;
 
   &:hover {
     background-color: rgba(206, 74, 74, 0.7);
