--- a/style.css
+++ b/style.css
@@ -37,6 +37,21 @@
      object-fit: contain;
 }
 
+.hand-pointer {
+  cursor: pointer; /* 设置光标为手指指向图标 */
+}
+
+#custom-cursor {
+  position: fixed;
+  width: 24px; /* 自定义图标的宽度 */
+  height: 24px; /* 自定义图标的高度 */
+  background-color: #ff0000; /* 自定义图标的背景颜色 */
+  border-radius: 50%; /* 可以根据需要设置形状 */
+  pointer-events: none; /* 使鼠标图标不影响交互 */
+  transform: translate(-50%, -50%); /* 将图标定位在光标中心 */
+  transition: transform 0.2s ease; /* 添加平滑的过渡效果 */
+}
+
 header {
   background-color: rgba(245, 229, 231, 0.9);
   display: flex;
@@ -82,6 +97,9 @@ main section.background-img1 {
   background-repeat: no-repeat;
   background-position: center;
   transition: background-image 1s ease;
+}
+main section.background-img1:hover {
+  cursor: pointer !important; /* 设置光标为手指指向图标 */
 }
 main section.background-img1 h2 {
   display: flex;
@@ -139,6 +157,9 @@ main section.background-img2 {
   transition: background-image 1s ease;
   border-radius: 5%;
   background-position: center;
+}
+main section.background-img2:hover {
+  cursor: pointer !important; /* 设置光标为手指指向图标 */
 }
 main section.background-img2 h2 {
   display: flex;
@@ -223,6 +244,13 @@ main section.aboutUs h3 {
   text-align: center;
   justify-items: center;
   align-items: center;
+}
+main section.aboutUs h2 {
+  margin-bottom: 30px;
+  text-align: center;
+  justify-items: center;
+  align-items: center;
+  font-size: 1.3rem;
 }
 main section.aboutUs div.coupleInfo {
   display: flex;
