--- a/style.css
+++ b/style.css
@@ -37,21 +37,6 @@
      object-fit: contain;
 }
 
-.hand-pointer {
-  cursor: pointer; /* 设置光标为手指指向图标 */
-}
-
-#custom-cursor {
-  position: fixed;
-  width: 24px; /* 自定义图标的宽度 */
-  height: 24px; /* 自定义图标的高度 */
-  background-color: #ff0000; /* 自定义图标的背景颜色 */
-  border-radius: 50%; /* 可以根据需要设置形状 */
-  pointer-events: none; /* 使鼠标图标不影响交互 */
-  transform: translate(-50%, -50%); /* 将图标定位在光标中心 */
-  transition: transform 0.2s ease; /* 添加平滑的过渡效果 */
-}
-
 header {
   background-color: rgba(245, 229, 231, 0.9);
   display: flex;
@@ -96,7 +81,7 @@ main section.background-img1 {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  transition: background-image 1s ease;
+  transition: background-image 0.6s ease-in-out;
 }
 main section.background-img1:hover {
   cursor: pointer !important; /* 设置光标为手指指向图标 */
@@ -154,7 +139,7 @@ main section.background-img2 {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  transition: background-image 1s ease;
+  transition: background-image 0.6s ease-in-out;
   border-radius: 5%;
   background-position: center;
 }
@@ -281,13 +266,13 @@ main section.aboutUsText {
   align-items: center;
   justify-items: center;
   padding-top: 30px;
-  text-align: center; /* 文本居中对齐 */
+  text-align: center;
   color: rgb(102, 105, 108);
   min-height: 30vh;
   z-index: 5;
 }
 main section.aboutUsText p {
-  font-size: 14px; /* 修改段落字体大小为14像素或根据需要调整 */
+  font-size: 16px;
   padding: 50px;
   text-align: left;
   max-width: 600px;
@@ -307,7 +292,7 @@ main section.weddingLink h3 {
 main section.weddingInfo p,
 main section.weddingLink p {
   line-height: 2;
-  font-size: 14px;
+  font-size: 16px;
   padding: 50px;
   flex-direction: column;
 }
@@ -353,7 +338,7 @@ main section.notice div.notice-main div.notice-text h4 i {
 }
 main section.notice div.notice-main div.notice-text p {
   line-height: 2;
-  font-size: 14px;
+  font-size: 16px;
   padding-bottom: 50px;
   flex-direction: column;
 }
@@ -368,11 +353,17 @@ main section.photos {
 }
 main section.photos h3.titleText {
   display: flex;
-  padding-top: 60px;
+  padding-top: 100px;
   margin-bottom: 100px;
   text-align: center;
   justify-items: center;
   align-items: center;
+}
+main section.photos p {
+  line-height: 2;
+  font-size: 16px;
+  padding-bottom: 50px;
+  flex-direction: column;
 }
 main section.photos div.swiper {
   width: 35vw;
@@ -644,7 +635,7 @@ main section.justWhite {
   }
   main body main section.aboutUsText p {
     width: 80vw;
-    font-size: 14px; /* 修改段落字体大小为14像素或根据需要调整 */
+    font-size: 16px;
     padding: 10px;
     text-align: center;
   }
