--- a/style.css
+++ b/style.css
@@ -400,6 +400,18 @@ main section.justWhite {
   width: 100%;
   height: 200px;
 }
+main section.justWhite h3 {
+  padding-top: 80px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+main section.justWhite p {
+  text-align: center;
+  line-height: 2;
+  font-size: 16px;
+  padding: 0px;
+  flex-direction: column;
+}
 @media screen and (max-width: 450px) {
   main body header {
     display: flex;
