--- a/style.scss
+++ b/style.scss
@@ -289,7 +289,7 @@ main {
     min-height: 30vh;
     z-index: 5;
     p {
-      font-size: 16px; 
+      font-size: 16px;
       padding: 50px;
       text-align: left;
       max-width: 600px;
@@ -430,6 +430,18 @@ main {
     background-color: white;
     width: 100%;
     height: 200px;
+    h3 {
+      padding-top: 80px;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+    p {
+      text-align: center;
+      line-height: 2;
+      font-size: 16px;
+      padding: 0px;
+      flex-direction: column;
+    }
   }
 
   @media screen and (max-width: 450px) {
@@ -691,7 +703,7 @@ main {
           align-items: center;
           p {
             width: 80vw;
-            font-size: 16px; 
+            font-size: 16px;
             padding: 10px;
             text-align: center;
           }
