--- a/style.scss
+++ b/style.scss
@@ -385,7 +385,7 @@ main {
     p {
       line-height: 2;
       font-size: 16px;
-      padding-bottom: 50px;
+      padding: 50px;
       flex-direction: column;
     }
     div.swiper {
@@ -430,6 +430,7 @@ main {
     background-color: white;
     width: 100%;
     height: 200px;
+    margin-bottom: 50px;
     h3 {
       padding-top: 80px;
       margin-bottom: 40px;
@@ -439,7 +440,7 @@ main {
       text-align: center;
       line-height: 2;
       font-size: 16px;
-      padding: 0px;
+      padding: 30px;
       flex-direction: column;
     }
   }
